# fasatauth

./: .env-sample  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: action.yml
src/fastauth/: __about__.py  main.py
